# easi-backend

./: .env  .gitattributes  backend.tar.xz  db.sqlite3  pyproject.toml  requirements.txt
contact/: admin.py  models.py  serializers.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_newsletter.py
contact/templates/emails/: admin_notification.html  contact_confirmation.html  newsletter_confirmation.html
main/: settings.py  urls.py
resources/: models.py  urls.py  views.py
resources/migrations/: 0001_initial.py
