[project]
name = "easi-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jumashafara",email = "jumashafara0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref (==3.8.1)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "django (==5.1.6)",
    "django-cors-headers (==4.7.0)",
    "django-filter (==25.1)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.5.0)",
    "drf-nested-routers (==0.94.1)",
    "idna (==3.10)",
    "pillow (==11.1.0)",
    "pyjwt (==2.9.0)",
    "python-dotenv (==1.0.1)",
    "requests (==2.32.3)",
    "sqlparse (==0.5.3)",
    "urllib3 (==2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
